--- a/www/Info/RockRCredits.html
+++ b/www/Info/RockRCredits.html
@@ -41,7 +41,7 @@
 <p>Auguie, B. (2016). gridExtra: Miscellaneous Functions for “Grid” Graphics. R package version 2.2.1. <a href="https://CRAN.R-project.org/package=gridExtra" target="_blank">https://CRAN.R-project.org/package=gridExtra</a></p>
 <p>Chang, W., Cheng, J., Allaire, J. J., Xie, Y. and McPherson, J. (2017). shiny: Web Application Framework for R. R package version 1.0.5. <a href="https://CRAN.R-project.org/package=shiny" target="_blank">https://CRAN.R-project.org/package=shiny</a></p>
 <p>Guzman, R. G. (2015). NORRRM: Geochemical Toolkit for R. R package version 1.0.0. <a href="https://CRAN.R-project.org/package=NORRRM" target="_blank">https://CRAN.R-project.org/package=NORRRM</a></p>
-<p>Hamilton, N. (2017). ggtern: An Extension to ggplot2, for the Creation of Ternary Diagrams. R package version 2.2.1. <a href="https://CRAN.R-project.org/package=ggtern" target="_blank">https://CRAN.R-project.org/package=ggtern</a></p>
+<p>Hamilton, N. E., &amp; Ferry, M. (2018). ggtern: Ternary Diagrams Using ggplot2. <em>Journal of Statistical Software</em>, <em>87</em>(<em>CN 3</em>), 1-17. <a href="https://CRAN.R-project.org/package=ggtern" target="_blank">https://CRAN.R-project.org/package=ggtern</a></p>
 <p>R Core Team (2017). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. URL <a href="https://www.R-project.org/" target="_blank">https://www.R-project.org/</a>.</p>
 <p>Urbanek, S. (2013). png: Read and write PNG images. R package version 0.1-7. <a href="https://CRAN.R-project.org/package=png" target="_blank">https://CRAN.R-project.org/package=png</a></p>
 <p>Wickham, H. (2009). ggplot2: Elegant Graphics for Data Analysis (2nd ed.). New York, NY: Springer-Verlag.</p>
