--- a/google-analytics.html
+++ b/google-analytics.html
@@ -8,6 +8,15 @@
   gtag('config', 'UA-129965727-1');
 </script>
 
+<script>
+  $(document).on('shiny:connected', function(event) {
+	   gtag('event', 'User Visited', {
+	   'event_category': 'User Metrics',
+	   'event_label': 'user has visited RockR!'
+	   });
+  });
+</script>
+
 <!-- Event tracking codes for bivariate section of RockR -->
 <script>
   $(document).on('shiny:inputchanged', function(event) {
