--- a/www/Info/RockRCredits.html
+++ b/www/Info/RockRCredits.html
@@ -4,32 +4,21 @@
 <div id="we-hope-you-enjoy-using-rockr" class="section level1">
 <h1>We hope you enjoy using RockR!</h1>
 <p><br></p>
-<div id="app-authors" class="section level2">
-<h2>App authors</h2>
-<p>Jeremiah Mickey, John T. Shukle, Thomas zur Loye*,</p>
-<ul>
-<li>Corresponding author</li>
-</ul>
+<div id="contact-the-rockr-developers" class="section level2">
+<h2>Contact the RockR! developers</h2>
+<div id="apperception-group-llc" class="section level3">
+<h3>Apperception-Group, LLC</h3>
+<p>(John Shukle, Tom zur Loye, Jeremiah Mickey)<br />
+<a href="mailto:apperception.group@gmail.com">apperception.group@gmail.com</a></p>
+</div>
 </div>
 <div id="faculty-administrator" class="section level2">
 <h2>Faculty Administrator</h2>
 <p>Andrew Barth (<a href="mailto:ibsz100@iupui.edu">ibsz100@iupui.edu</a>)</p>
 </div>
-<div id="contact-the-rockr-developers" class="section level2">
-<h2>Contact the RockR! developers</h2>
-<p><a href="mailto:earthsciencesapps.rockr@gmail.com">earthsciencesapps.rockr@gmail.com</a></p>
-</div>
-<div id="rockr-social-media" class="section level2">
-<h2>RockR! social media</h2>
-<p>Facebook page: RockR</p>
-<p>Facebook <span class="citation">@mention</span>: <span class="citation">@RockRwebapp</span></p>
-<p>Reddit: u/RockRwebapp</p>
-<p>Twitter page: RockRwebapp</p>
-<p>Twitter <span class="citation">@mention</span>: <span class="citation">@RRwebapp</span></p>
-</div>
 <div id="how-to-cite-rockr" class="section level2">
 <h2>How to cite RockR!</h2>
-<p>RockR! (2019). Retrieved from <a href="http://apps.earthsciences.iupui.edu:3838/RockR/" class="uri">http://apps.earthsciences.iupui.edu:3838/RockR/</a></p>
+<p>RockR! (2020). Retrieved from <a href="http://apps.earthsciences.iupui.edu:3838/RockR/" class="uri">http://apps.earthsciences.iupui.edu:3838/RockR/</a></p>
 </div>
 <div id="license-and-limitations" class="section level2">
 <h2>License and Limitations</h2>
@@ -52,14 +41,14 @@
 </div>
 <div id="primary-literature-references" class="section level2">
 <h2>Primary Literature References</h2>
-<p>Aramaki, S., &amp; Roy, R. (1962). Revised phase diagram for the system Al2O3SiO2. <em>Journal of the American Ceramic Society</em>, <em>45</em>(<em>5</em>), 229-242.</p>
+<p>Aramaki, S., &amp; Roy, R. (1962). Revised phase diagram for the system Al2O3?SiO2. <em>Journal of the American Ceramic Society</em>, <em>45</em>(<em>5</em>), 229-242.</p>
 <p>Cox, K. G., Bell, J. D., &amp; Pankhurst, R. J. (1979) The interpretation of igneous rocks. London, GB: Unwin Hyman Ltd.</p>
 <p>Dickinson, W. R., &amp; Suczek, C. A. (1979). Plate tectonics and sandstone compositions. <em>Aapg Bulletin</em>, <em>63</em>(<em>12</em>), 2164-2182.</p>
 <p>Eskola, P. (1920). The Mineral Facies of Rocks. <em>Norsk. Geol. Tidsskr. 6</em>, 143-194.</p>
 <p>Folk, R. L. (1954). The distinction between grain size and mineral composition in sedimentary-rock nomenclature. <em>The Journal of Geology</em>, <em>62</em>(<em>4</em>), 344-359.</p>
 <p>Lebas, M.J., Le Maitre, R.W., Streckeisen, A., Zanettin, B. (1986). A Chemical Classification of Volcanic Rocks Based on the Total Alkali-Silica Diagram. <em>Journal of Petrology</em>, <em>27</em> (<em>3</em>), 745-750.</p>
 <p>Middlemost, E. (1994). Naming materials in the magma/igneous rock system. <em>Earth-Science Reviews</em>, <em>37</em>, 215-224</p>
-<p>Möbius, A. F. (1827). Der barycentrische Calcul ein neues Hüsmittel zur analytischen Behandlung der Geometrie dargestellt und insbesondere auf die Bildung neuer Classen von Aufgaben und die Entwickelung mehrerer Eiegnschaften der Kegelschnitte. Leipzig: J. A. Barth</p>
+<p>M?bius, A. F. (1827). Der barycentrische Calcul ein neues H?smittel zur analytischen Behandlung der Geometrie dargestellt und insbesondere auf die Bildung neuer Classen von Aufgaben und die Entwickelung mehrerer Eiegnschaften der Kegelschnitte. Leipzig: J. A. Barth</p>
 <p>O’Connor, J. T. (1965). A classification for quartz-rich igneous rocks based on feldspar ratios. <em>US Geological Survey Professional Paper B</em>, <em>525</em>, 79-84.</p>
 <p>Peacock, S. M. (1993). The importance of blueschist- eclogite dehydration reactions in subducting oceanic crust. <em>Geological Society of America</em>, <em>105</em>, 684-694</p>
 <p>Shepard, F.P. (1954). Nomenclature based on sand-silt-clay ratios: <em>Journal of Sedimentary Petrology</em>, <em>24</em>, 151-158.</p>
